--- a/Day2/Day2_1.html
+++ b/Day2/Day2_1.html
@@ -12,24 +12,21 @@ Note: once you create web page upload the page to Github account with public acc
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigation Bar</title>
+    <title>Simple Navigation</title>
 </head>
 <body>
 
     <!-- Navigation Bar -->
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#signup">Signup</a></li>
-            <li><a href="#login">Login</a></li>
-            <li>
-                <form action="#" method="get">
-                    <input type="text" name="search" placeholder="Search...">
-                    <button type="submit">Search</button>
-                </form>
-            </li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="signup.html">Signup</a></li>
+            <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
+
+    <h1>Welcome to the Main Page!</h1>
+    <p>Select an option from the navigation bar.</p>
 
 </body>
 </html>
