--- a/Day2/Day2_2.html
+++ b/Day2/Day2_2.html
@@ -19,6 +19,18 @@ Note: once you create the poftfolio upload the page with neccesary document to G
 </head>
 <body>
 
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="#intro">Home</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#feedback">Feedback</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
     <header>
         <h1>Princi Jain - Portfolio</h1>
         <p>Welcome to my personal portfolio website</p>
@@ -48,7 +60,6 @@ Note: once you create the poftfolio upload the page with neccesary document to G
         <!-- Projects / Work Experiences -->
         <section id="projects">
             <h2>Projects / Work Experience</h2>
-            <p>Here are some of my recent projects and work experiences:</p>
             <ul>
                 <li><a href="https://github.com/yourusername/project1" target="_blank">Project 1 - Description</a></li>
                 <li><a href="https://github.com/yourusername/project2" target="_blank">Project 2 - Description</a></li>
@@ -59,11 +70,9 @@ Note: once you create the poftfolio upload the page with neccesary document to G
         <!-- Feedback / Achievements -->
         <section id="feedback">
             <h2>Feedback & Achievements</h2>
-            <p>Here are some feedback from colleagues and clients:</p>
             <blockquote>
                 "Great work on the project! Your attention to detail and innovative ideas were outstanding." – Dr Devika Rubi
             </blockquote>
-            <p>Achievements:</p>
             <ul>
                 <li>Winner of SriVity Hackathon 2022</li>
                 <li>Completed Web Development Bootcamp (2023)</li>
@@ -88,7 +97,6 @@ Note: once you create the poftfolio upload the page with neccesary document to G
         <!-- Education Profile -->
         <section id="education">
             <h2>Education Profile</h2>
-            <p>I hold a degree in Computer Science from MIT. Here are some key details:</p>
             <ul>
                 <li>Degree: B.Sc. in Computer Science</li>
                 <li>University: KMIT</li>
@@ -99,7 +107,6 @@ Note: once you create the poftfolio upload the page with neccesary document to G
         <!-- Contact Information -->
         <section id="contact">
             <h2>Contact Information</h2>
-            <p>If you'd like to get in touch, feel free to reach out to me:</p>
             <ul>
                 <li>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></li>
                 <li>Phone: (123) 456-7890</li>
