--- a/Day2/Day2_1.html
+++ b/Day2/Day2_1.html
@@ -22,7 +22,11 @@ Note: once you create web page upload the page to Github account with public acc
             <li><a href="home.html">Home</a></li>
             <li><a href="signup.html">Signup</a></li>
             <li><a href="login.html">Login</a></li>
+            
         </ul>
+        <li>
+            <input type="search" placeholder="Search" >
+        </li>
     </nav>
 
     <h1>Welcome to the Main Page!</h1>
