--- a/Day7/about.html
+++ b/Day7/about.html
@@ -5,62 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ShopEase - About Us</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-  <!-- Header -->
-  <header class="bg-primary text-white text-center py-4">
-    <div class="container">
-      <h1>ShopEase</h1>
-      <p class="lead">Your One-Stop Shopping Destination</p>
-    </div>
-  </header>
-
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">ShopEase</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="about.html">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="products.html">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="gallery.html">Gallery</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="partners.html">Partners</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
-          </li>
-        </ul>
-        <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
-      </div>
-    </div>
-  </nav>
+  <!-- Header and Navbar will be loaded here -->
+  <div id="header-container"></div>
 
   <!-- Main Content -->
-  <main>
+  <main class="fade-in">
     <!-- About Us Hero -->
-    <section class="py-5 bg-light">
+    <section class="py-5">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
-            <img src="https://via.placeholder.com/600x400" alt="About ShopEase" class="img-fluid rounded">
+            <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1632&q=80" alt="About ShopEase" class="img-fluid rounded shadow">
           </div>
-          <div class="col-lg-6 order-lg-1">
-            <h2 class="display-4">Our Story</h2>
-            <p class="lead">Founded in 2010, ShopEase has grown from a small startup to a leading e-commerce platform.</p>
+          <div class="col-lg-6 order-lg-1 mt-4 mt-lg-0">
+            <h2 class="display-4 fw-bold mb-3">Our Story</h2>
+            <p class="lead text-primary mb-3">Founded in 2010, ShopEase has grown from a small startup to a leading e-commerce platform.</p>
             <p>What started as a passion project by a group of tech enthusiasts has evolved into a comprehensive shopping destination trusted by millions of customers worldwide. Our journey has been defined by innovation, customer-centricity, and a commitment to quality.</p>
           </div>
         </div>
@@ -68,12 +31,13 @@
     </section>
 
     <!-- Mission and Vision -->
-    <section class="py-5">
+    <section class="py-5 bg-light">
       <div class="container">
         <div class="row">
           <div class="col-md-6 mb-4">
             <div class="card h-100 border-primary">
-              <div class="card-body text-center">
+              <div class="card-body text-center p-4">
+                <i class="bi bi-bullseye text-primary fs-1 mb-3"></i>
                 <h3 class="card-title">Our Mission</h3>
                 <p class="card-text">To provide customers with a seamless shopping experience, offering high-quality products at competitive prices while maintaining exceptional customer service.</p>
               </div>
@@ -81,7 +45,8 @@
           </div>
           <div class="col-md-6 mb-4">
             <div class="card h-100 border-primary">
-              <div class="card-body text-center">
+              <div class="card-body text-center p-4">
+                <i class="bi bi-eye text-primary fs-1 mb-3"></i>
                 <h3 class="card-title">Our Vision</h3>
                 <p class="card-text">To become the world's most customer-centric e-commerce platform, where customers can find anything they might want to buy online at the best possible prices.</p>
               </div>
@@ -92,17 +57,20 @@
     </section>
 
     <!-- Our Values -->
-    <section class="py-5 bg-light">
+    <section class="py-5">
       <div class="container">
-        <h2 class="text-center mb-5">Our Core Values</h2>
+        <div class="text-center mb-5">
+          <h2 class="fw-bold">Our Core Values</h2>
+          <div class="d-flex justify-content-center">
+            <div class="border-bottom border-primary" style="width: 50px;"></div>
+          </div>
+        </div>
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <div class="card-body text-center">
-                <div class="mb-3">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-star text-primary" viewBox="0 0 16 16">
-                    <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
-                  </svg>
+              <div class="card-body text-center p-4">
+                <div class="rounded-circle bg-primary text-white d-inline-flex align-items-center justify-content-center mb-3" style="width: 70px; height: 70px;">
+                  <i class="bi bi-star fs-2"></i>
                 </div>
                 <h4 class="card-title">Quality</h4>
                 <p class="card-text">We are committed to offering only the highest quality products that meet our rigorous standards.</p>
@@ -111,11 +79,9 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <div class="card-body text-center">
-                <div class="mb-3">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-people text-primary" viewBox="0 0 16 16">
-                    <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8Zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022ZM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816ZM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z"/>
-                  </svg>
+              <div class="card-body text-center p-4">
+                <div class="rounded-circle bg-primary text-white d-inline-flex align-items-center justify-content-center mb-3" style="width: 70px; height: 70px;">
+                  <i class="bi bi-people fs-2"></i>
                 </div>
                 <h4 class="card-title">Customer-Centricity</h4>
                 <p class="card-text">Our customers are at the heart of everything we do. We continuously strive to exceed their expectations.</p>
@@ -124,11 +90,9 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <div class="card-body text-center">
-                <div class="mb-3">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-lightbulb text-primary" viewBox="0 0 16 16">
-                    <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1z"/>
-                  </svg>
+              <div class="card-body text-center p-4">
+                <div class="rounded-circle bg-primary text-white d-inline-flex align-items-center justify-content-center mb-3" style="width: 70px; height: 70px;">
+                  <i class="bi bi-lightbulb fs-2"></i>
                 </div>
                 <h4 class="card-title">Innovation</h4>
                 <p class="card-text">We embrace new technologies and ideas to continuously improve our platform and services.</p>
@@ -140,47 +104,84 @@
     </section>
 
     <!-- Team Section -->
-    <section class="py-5">
+    <section class="py-5 bg-light">
       <div class="container">
-        <h2 class="text-center mb-5">Meet Our Leadership Team</h2>
+        <div class="text-center mb-5">
+          <h2 class="fw-bold">Meet Our Leadership Team</h2>
+          <div class="d-flex justify-content-center">
+            <div class="border-bottom border-primary" style="width: 50px;"></div>
+          </div>
+        </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-4">
             <div class="card h-100">
-              <img src="https://via.placeholder.com/300x300" class="card-img-top" alt="CEO">
+              <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" class="card-img-top" alt="CEO">
               <div class="card-body text-center">
                 <h5 class="card-title">John Smith</h5>
-                <p class="text-muted">CEO & Founder</p>
+                <p class="text-primary">CEO & Founder</p>
                 <p class="card-text">With over 20 years of experience in retail and e-commerce, John leads our company with vision and passion.</p>
+                <div class="d-flex justify-content-center gap-2 mt-3">
+                  <a href="#" class="btn btn-outline-primary btn-sm rounded-circle">
+                    <i class="bi bi-linkedin"></i>
+                  </a>
+                  <a href="#" class="btn btn-outline-primary btn-sm rounded-circle">
+                    <i class="bi bi-twitter"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 mb-4">
             <div class="card h-100">
-              <img src="https://via.placeholder.com/300x300" class="card-img-top" alt="CTO">
+              <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=776&q=80" class="card-img-top" alt="CTO">
               <div class="card-body text-center">
                 <h5 class="card-title">Sarah Johnson</h5>
-                <p class="text-muted">CTO</p>
+                <p class="text-primary">CTO</p>
                 <p class="card-text">Sarah oversees our technological infrastructure and ensures we stay at the cutting edge of e-commerce innovation.</p>
+                <div class="d-flex justify-content-center gap-2 mt-3">
+                  <a href="#" class="btn btn-outline-primary btn-sm rounded-circle">
+                    <i class="bi bi-linkedin"></i>
+                  </a>
+                  <a href="#" class="btn btn-outline-primary btn-sm rounded-circle">
+                    <i class="bi bi-twitter"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 mb-4">
             <div class="card h-100">
-              <img src="https://via.placeholder.com/300x300" class="card-img-top" alt="COO">
+              <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" class="card-img-top" alt="COO">
               <div class="card-body text-center">
                 <h5 class="card-title">Michael Brown</h5>
-                <p class="text-muted">COO</p>
+                <p class="text-primary">COO</p>
                 <p class="card-text">Michael ensures our operations run smoothly, from supply chain management to customer fulfillment.</p>
+                <div class="d-flex justify-content-center gap-2 mt-3">
+                  <a href="#" class="btn btn-outline-primary btn-sm rounded-circle">
+                    <i class="bi bi-linkedin"></i>
+                  </a>
+                  <a href="#" class="btn btn-outline-primary btn-sm rounded-circle">
+                    <i class="bi bi-twitter"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 mb-4">
             <div class="card h-100">
-              <img src="https://via.placeholder.com/300x300" class="card-img-top" alt="CMO">
+              <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=761&q=80" class="card-img-top" alt="CMO">
               <div class="card-body text-center">
                 <h5 class="card-title">Emily Davis</h5>
-                <p class="text-muted">CMO</p>
+                <p class="text-primary">CMO</p>
                 <p class="card-text">Emily leads our marketing efforts, helping us connect with customers and build our brand presence.</p>
+                <div class="d-flex justify-content-center gap-2 mt-3">
+                  <a href="#" class="btn btn-outline-primary btn-sm rounded-circle">
+                    <i class="bi bi-linkedin"></i>
+                  </a>
+                  <a href="#" class="btn btn-outline-primary btn-sm rounded-circle">
+                    <i class="bi bi-twitter"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -189,75 +190,16 @@
     </section>
   </main>
 
-  <!-- Footer -->
-  <footer class="bg-dark text-white py-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 mb-3">
-          <h5>ShopEase</h5>
-          <p>Your one-stop shopping destination for all your needs.</p>
-        </div>
-        <div class="col-md-4 mb-3">
-          <h5>Quick Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="index.html" class="text-white">Home</a></li>
-            <li><a href="about.html" class="text-white">About Us</a></li>
-            <li><a href="products.html" class="text-white">Products</a></li>
-            <li><a href="contact.html" class="text-white">Contact Us</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 mb-3">
-          <h5>Contact Us</h5>
-          <address>
-            123 Shopping Street<br>
-            Retail City, RC 12345<br>
-            <a href="tel:+1234567890" class="text-white">Phone: (123) 456-7890</a><br>
-            <a href="mailto:info@shopease.com" class="text-white">Email: info@shopease.com</a>
-          </address>
-        </div>
-      </div>
-      <hr>
-      <div class="text-center">
-        <p>&copy; 2023 ShopEase. All rights reserved.</p>
-      </div>
-    </div>
-  </footer>
+  <!-- Footer will be loaded here -->
+  <div id="footer-container"></div>
 
-  <!-- Login Modal -->
-  <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="loginModalLabel">Login to Your Account</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="email" required>
-            </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Password</label>
-              <input type="password" class="form-control" id="password" required>
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="rememberMe">
-              <label class="form-check-label" for="rememberMe">Remember me</label>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Login</button>
-          </form>
-          <div class="text-center mt-3">
-            <a href="#" class="text-decoration-none">Forgot password?</a>
-            <p class="mt-2">Don't have an account? <a href="#" class="text-decoration-none">Register</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <!-- Login Modal will be loaded here -->
+  <div id="modal-container"></div>
 
   <!-- Bootstrap JS Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Custom JS -->
+  <script src="js/main.js"></script>
 </body>
 </html>
 
